Fix for bug #134600